[package]
name = "asteroids_assignment"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.20.0"
specs-derive = "0.4.1"
vector2d = "2.2.0"
rand = "0.8.5"
once_cell = "1.18.0"
kira = "0.7.0"
instant = "0.1.12"

[dependencies.sdl2]
version = "0.35.2"
features = ["image","ttf"]
